--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/automobile
+    url: jdbc:mysql://localhost:3306/automobile?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 12345678
   jpa:
@@ -16,5 +16,5 @@ spring:
         format_sql: false
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: 20MB
+      max-request-size: 20MB
